# simple-gameboy

./: .gitignore  meson.build
include/: constants.hpp
src/: constants.hpp  gb.cpp  gb.hpp  main.cpp  main.hpp
src/cartridge/: cartridge.cpp  cartridge.hpp
src/constants/: constants.hpp
src/cpu/: cpu.cpp  cpu.hpp
subprojects/Catch2-3.8.1/: .meson-subproject-wrap-hash.txt
tests/: cartridge_tests.cpp  cpu_tests.cpp  sample_test.cpp
